// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundIcon 1`] = `
<div
  class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
  color="seattle10"
>
  M
</div>
`;

exports[`RoundIcon w/ any props 1`] = `
<div
  class="RoundIconstyles__Box-sc-15n018x-0 iWAKyw className"
  color="seattle10"
  id="id"
  title="title"
>
  M
</div>
`;

exports[`RoundIcon w/ clickable 1`] = `
<div
  class="RoundIconstyles__Box-sc-15n018x-0 iWAKyw"
  color="seattle10"
>
  M
</div>
`;

exports[`RoundIcon w/ color 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 kHHlDj"
    color="seattle60"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 gddvKa"
    color="oslo10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hUiqmZ"
    color="oslo60"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eBIeMu"
    color="miami10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hoWoOs"
    color="miami100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hsHbnU"
    color="nice10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cLGPlh"
    color="nice100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 fpTMsp"
    color="dubai10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eeJPyD"
    color="dubai100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 feUzIt"
    color="paris10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 wvHqV"
    color="paris100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hDaKuJ"
    color="sochi10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eigwmm"
    color="sochi100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 gugznH"
    color="tokyo10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cJWHYA"
    color="tokyo100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 kyyEuP"
    color="dublin10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 jNJFpZ"
    color="dublin100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eqnHxq"
    color="bern10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 uqJgV"
    color="bern100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 ktDsQQ"
    color="manila10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 vmbWl"
    color="manila100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 iwSMzM"
    color="tallin10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eLoGUO"
    color="tallin100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 bSeMYZ"
    color="seoul10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cvlgtD"
    color="seoul100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 jojlPU"
    color="havana10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 vqsAh"
    color="havana100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 ggABti"
    color="madrid10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hDhffL"
    color="madrid100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 lclPJf"
    color="porto10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 iCEoJF"
    color="porto100"
  >
    M
  </div>,
]
`;

exports[`RoundIcon w/ color and icon 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
    color="seattle10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 kHHlDj"
    color="seattle60"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 gddvKa"
    color="oslo10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hUiqmZ"
    color="oslo60"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eBIeMu"
    color="miami10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hoWoOs"
    color="miami100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hsHbnU"
    color="nice10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cLGPlh"
    color="nice100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 fpTMsp"
    color="dubai10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eeJPyD"
    color="dubai100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 feUzIt"
    color="paris10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 wvHqV"
    color="paris100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hDaKuJ"
    color="sochi10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eigwmm"
    color="sochi100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 gugznH"
    color="tokyo10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cJWHYA"
    color="tokyo100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 kyyEuP"
    color="dublin10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 jNJFpZ"
    color="dublin100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eqnHxq"
    color="bern10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 uqJgV"
    color="bern100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 ktDsQQ"
    color="manila10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 vmbWl"
    color="manila100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 iwSMzM"
    color="tallin10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 eLoGUO"
    color="tallin100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 bSeMYZ"
    color="seoul10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cvlgtD"
    color="seoul100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 jojlPU"
    color="havana10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 vqsAh"
    color="havana100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 ggABti"
    color="madrid10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hDhffL"
    color="madrid100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 lclPJf"
    color="porto10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 iCEoJF"
    color="porto100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
      />
    </svg>
  </div>,
]
`;

exports[`RoundIcon w/ icon 1`] = `
<div
  class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
  color="seattle10"
>
  <svg
    fill="currentColor"
    height="20"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs />
    <path
      d="M16.229 3.222l-.358-.21a7.755 7.755 0 01-8.883 3.699 5.913 5.913 0 015.935-2.632 6.28 6.28 0 001.486-1.707A8 8 0 004 10v2.958a8 8 0 1016 0V10a7.994 7.994 0 00-3.771-6.778zm-1.182 14.896a5.913 5.913 0 01-1.969.737V17h-2.031v1.875a5.954 5.954 0 01-2.094-.757v-.071a3.047 3.047 0 016.094 0v.071zM18 12.958c0 1.3-.424 2.564-1.208 3.6a5 5 0 00-9.579.006A5.957 5.957 0 016 12.964V10c.002-.487.063-.971.183-1.443A9.65 9.65 0 009.052 9a9.746 9.746 0 007.214-3.2A5.963 5.963 0 0118 10v2.958z"
    />
  </svg>
</div>
`;

exports[`RoundIcon w/ size 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 fbyUDD"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 ptlij"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 cPOWqw"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-15n018x-0 bSRmYj"
    color="seattle10"
  >
    M
  </div>,
]
`;
